Service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cpjhelloworld
  name: cpjhelloworld
spec:
  ports:
  - name: 8080-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8778-nrepl
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: cpjhelloworld
  type: ClusterIP
