Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: cpjhelloworld
  name: cpjhelloworld
spec:
  port:
    targetPort: 8080-http
  to:
    kind: Service
    name: cpjhelloworld
    weight: 100
  wildcardPolicy: None
